data/all_generated_tests/raw_wast_tests/loop_TypeMismatchinControlFlowInstructions_992.wast
;; 3. **Branch to Loop Target with Incompatible Types**:    - A branch instruction within a loop that jumps to its beginning considering incorrect operand types.    - This tests whether the branch to a loop target correctly checks and manages operand stack types.    - Specific Constraint: Ensuring valid type checks on backward branches.

(assert_invalid
  (module
    (func
      (loop $loop (result i32)
        (i32.const 0)
        (br $loop))) 
  )
  "type mismatch"
)